z-index fixed 1

--- a/scss/components/_logo.scss
+++ b/scss/components/_logo.scss
@@ -3,25 +3,6 @@
 	height: 49px;
 	margin-top: -3px;
 	display: block;
-
-	.svg-object-raketa,
-	.svg-symbol-s,
-	.svg-symbol-p,
-	.svg-symbol-c,
-	.svg-symbol-e,
-	.svg-object-fire {
-		fill: $yellow;
-		transition: all .2s;
-	}
-
-	&:hover {
-		.svg-object-raketa,
-		.svg-symbol-s,
-		.svg-symbol-p,
-		.svg-symbol-c,
-		.svg-symbol-e,
-		.svg-object-fire {
-			fill: darken($yellow, 15%);		
-		}
-	}
+	background: url("../img/Emblem.png") no-repeat;
+	background-size: cover;
 }
